--- a/template/backend/ftp/group_edit.html
+++ b/template/backend/ftp/group_edit.html
@@ -8,7 +8,7 @@
 {{Block "main"}}
 <div class="row">
     <div class="col-md-12">
-        <div class="block-flat">
+        <div class="block-flat no-padding">
           <div class="header">							
             <h3>{{if HasSuffix $.URL.Path "_add"}}{{"添加FTP用户组"|$.T}}{{else}}{{"修改FTP用户组"|$.T}}{{end}}</h3>
           </div>
