--- a/template/backend/ftp/group.html
+++ b/template/backend/ftp/group.html
@@ -48,10 +48,10 @@
                                         {{else}}
                                         <td class="color-success">{{"允许连接"|$.T}}</td>
                                         {{end}}
-										<td class="text-center">
-										<a class="label label-default" href="{{BackendURL}}/ftp/group_add?copyId={{$v.Id}}" title="{{"复制"|$.T}}" data-toggle="tooltip"><i class="fa fa-copy"></i></a>
-										<a class="label label-success" href="{{BackendURL}}/ftp/group_edit?id={{$v.Id}}" title="{{"编辑"|$.T}}" data-toggle="tooltip"><i class="fa fa-pencil"></i></a> 
-										<a class="label label-danger" href="{{BackendURL}}/ftp/group_delete?id={{$v.Id}}" onclick="return confirm('{{"真的要删除吗？"|$.T}}');" title="{{"删除"|$.T}}" data-toggle="tooltip"><i class="fa fa-times"></i></a>
+										<td class="text-center label-group">
+										<a class="label label-default" href="{{BackendURL}}/ftp/group_add?copyId={{$v.Id}}" title="{{`复制`|$.T}}" data-toggle="tooltip"><i class="fa fa-copy"></i></a>
+										<a class="label label-success" href="{{BackendURL}}/ftp/group_edit?id={{$v.Id}}" title="{{`编辑`|$.T}}" data-toggle="tooltip"><i class="fa fa-pencil"></i></a> 
+										<a class="label label-danger" href="{{BackendURL}}/ftp/group_delete?id={{$v.Id}}" onclick="return confirm('{{`真的要删除吗？`|$.T}}');" title="{{`删除`|$.T}}" data-toggle="tooltip"><i class="fa fa-times"></i></a>
 										</td>
 									</tr>
                                     {{end}}
