--- a/template/backend/ftp/group.html
+++ b/template/backend/ftp/group.html
@@ -12,55 +12,55 @@
 							<a href="{{BackendURL}}/ftp/group_add" class="btn btn-success pull-right">
 								<i class="fa fa-plus"></i>
 								{{"添加用户组"|$.T}}
-							</a>							
+							</a>
 							<h3>{{"FTP用户组列表"|$.T}}</h3>
 						</div>
 						<div class="content">
-							<div class="table-responsive">
+							<div class="table-responsive" data-pattern="priority-columns">
 							<table class="table no-border hover">
 								<thead class="no-border">
 									<tr>
 										<th style="width:55px"><strong>ID</strong></th>
 										<th><strong>{{"用户组名称"|$.T}}</strong></th>
-										<th><strong>{{"授权目录"|$.T}}</strong></th>
-										<th style="width:130px"><strong>{{"创建时间"|$.T}}</strong></th>
-										<th style="width:130px"><strong>{{"更新时间"|$.T}}</strong></th>
-										<th style="width:80px"><strong>{{"状态"|$.T}}</strong></th>
-										<th><strong>{{"用户连接"|$.T}}</strong></th>
+										<th data-priority="1"><strong>{{"授权目录"|$.T}}</strong></th>
+										<th data-priority="3" style="width:130px"><strong>{{"创建时间"|$.T}}</strong></th>
+										<th data-priority="5" style="width:130px"><strong>{{"更新时间"|$.T}}</strong></th>
+										<th data-priority="1" style="width:80px"><strong>{{"状态"|$.T}}</strong></th>
+										<th data-priority="1"><strong>{{"用户连接"|$.T}}</strong></th>
 										<th style="width:120px" class="text-center"><strong>{{"操作"|$.T}}</strong></th>
 									</tr>
 								</thead>
 								<tbody class="no-border-y">
-                                    {{range $k,$v := $.Stored.listData}}
+                                    {{- range $k,$v := $.Stored.listData}}
 									<tr>
 										<td>{{$v.Id}}</td>
 										<td>{{$v.Name}}</td>
 										<td>{{$v.Directory}}</td>
 										<td>{{(Date $v.Created).Format "2006-01-02 15:04:05"}}</td>
 										<td>{{if gt $v.Updated 0}}{{(Date $v.Updated).Format "2006-01-02 15:04:05"}}{{end}}</td>
-                                        {{if eq $v.Disabled "Y"}}
+                                        {{- if eq $v.Disabled "Y"}}
 										<td class="color-danger">{{"禁用"|$.T}}</td>
-                                        {{else}}
+                                        {{- else}}
                                         <td class="color-success">{{"启用"|$.T}}</td>
-                                        {{end}}
-										{{if eq $v.Banned "Y"}}
+                                        {{- end}}
+										{{- if eq $v.Banned "Y"}}
 										<td class="color-danger">{{"禁止连接"|$.T}}</td>
-                                        {{else}}
+                                        {{- else}}
                                         <td class="color-success">{{"允许连接"|$.T}}</td>
-                                        {{end}}
+                                        {{- end}}
 										<td class="text-center label-group">
 										<a class="label label-default" href="{{BackendURL}}/ftp/group_add?copyId={{$v.Id}}" title="{{`复制`|$.T}}" data-toggle="tooltip"><i class="fa fa-copy"></i></a>
-										<a class="label label-success" href="{{BackendURL}}/ftp/group_edit?id={{$v.Id}}" title="{{`编辑`|$.T}}" data-toggle="tooltip"><i class="fa fa-pencil"></i></a> 
+										<a class="label label-success" href="{{BackendURL}}/ftp/group_edit?id={{$v.Id}}" title="{{`编辑`|$.T}}" data-toggle="tooltip"><i class="fa fa-pencil"></i></a>
 										<a class="label label-danger" href="{{BackendURL}}/ftp/group_delete?id={{$v.Id}}" onclick="return confirm('{{`真的要删除吗？`|$.T}}');" title="{{`删除`|$.T}}" data-toggle="tooltip"><i class="fa fa-times"></i></a>
 										</td>
 									</tr>
-                                    {{end}}
+                                    {{- end}}
 								</tbody>
-							</table>		
+							</table>
 							</div>
 							{{$.Stored.pagination.Render}}
 						</div>
-					</div>				
+					</div>
 				</div>
 			</div>
 {{/Block}}
